added rest of files

--- a/index.html
+++ b/index.html
@@ -146,14 +146,14 @@
                     <h2 class="ir heading-bridesmaides">Bridesmaids</h2>
                     <div class="carousel-wrap">
                         <div class="carousel" style="width: 1744px;">
-                            <a title="Ann Catherine Mouton" class="active" href="#bridesmaid1"><img height="182" width="168" src="img/blank.png" data-original="img/girls/bridesmaid1.png"></a>
-                            <a title="Ashley Schroeder" href="#bridesmaid2"><img height="182" width="168" src="img/blank.png" data-original="img/girls/bridesmaid2.png"></a>
-                            <a title="MCrystal De Rosales" href="#bridesmaid3"><img height="182" width="168" src="img/blank.png" data-original="img/girls/bridesmaid3.png"></a>
-                            <a title="Kassie Roy" href="#bridesmaid4"><img height="182" width="168" src="img/blank.png" data-original="img/girls/bridesmaid4.png"></a>
-                            <a title="Mallary Louviere" href="#bridesmaid5"><img height="182" width="168" src="img/blank.png" data-original="img/girls/bridesmaid5.png"></a>
-                            <a title="Maria Palmiano" href="#bridesmaid6"><img height="182" width="168" src="img/blank.png" data-original="img/girls/bridesmaid6.png"></a>
-                            <a title="Noelle Comeaux" href="#bridesmaid7"><img height="182" width="168" src="img/blank.png" data-original="img/girls/bridesmaid7.png"></a>
-                            <a title="Verna Jane Abante" href="#bridesmaid8"><img height="182" width="168" src="img/blank.png" data-original="img/girls/bridesmaid8.png"></a>
+                            <a title="Ann Catherine Mouton" class="active" href="#bridesmaid1"><img height="182" width="168" src="img/blank.png" data-original="img/bridesmaids/bridesmaid1.png"></a>
+                            <a title="Ashley Schroeder" href="#bridesmaid2"><img height="182" width="168" src="img/blank.png" data-original="img/bridesmaids/bridesmaid2.png"></a>
+                            <a title="MCrystal De Rosales" href="#bridesmaid3"><img height="182" width="168" src="img/blank.png" data-original="img/bridesmaids/bridesmaid3.png"></a>
+                            <a title="Kassie Roy" href="#bridesmaid4"><img height="182" width="168" src="img/blank.png" data-original="img/bridesmaids/bridesmaid4.png"></a>
+                            <a title="Mallary Louviere" href="#bridesmaid5"><img height="182" width="168" src="img/blank.png" data-original="img/bridesmaids/bridesmaid5.png"></a>
+                            <a title="Maria Palmiano" href="#bridesmaid6"><img height="182" width="168" src="img/blank.png" data-original="img/bridesmaids/bridesmaid6.png"></a>
+                            <a title="Noelle Comeaux" href="#bridesmaid7"><img height="182" width="168" src="img/blank.png" data-original="img/bridesmaids/bridesmaid7.png"></a>
+                            <a title="Verna Jane Abante" href="#bridesmaid8"><img height="182" width="168" src="img/blank.png" data-original="img/bridesmaids/bridesmaid8.png"></a>
                         </div>
                     </div>
                     <div id="bridesmaid1" class="info" style="margin-left: -303px;">
